--- a/src/components/Page/Header/Menu.css
+++ b/src/components/Page/Header/Menu.css
@@ -2,6 +2,7 @@
   position: relative;
   height: 30px;
   width: 30px;
+  background: #f9dc5c;
 
   &::before {
     content: '☰';
@@ -21,7 +22,7 @@
     position: absolute;
     top: 100%;
     padding: 20px 10px;
-    background: rgba(144, 238, 144, 0.948);
+    background: #f9dc5c;
     transform: translateX(-100%);
     transition: transform 200ms ease-in;
   }
