--- a/src/components/Page/Header/Navigation.css
+++ b/src/components/Page/Header/Navigation.css
@@ -14,5 +14,12 @@
     text-decoration: none;
     text-transform: uppercase;
     font-size: 0.8em;
+    width: 100%;
+    display: flex;
+    align-items: flex-start;
+  }
+  :hover {
+    background-color: #F68E5F;
+    transition: 1s ease-in-out;
   }
 }
