Change around css to include more global variables

--- a/src/components/Page/Header/Header.css
+++ b/src/components/Page/Header/Header.css
@@ -1,7 +1,8 @@
 .Header {
   position: sticky;
   top: 0;
-  background: #f9dc5c;
+  background: var(--header-color);
+  color: var(--font-color);
 
   height: 30px;
 
