--- a/src/components/Page/global.css
+++ b/src/components/Page/global.css
@@ -2,9 +2,20 @@
   box-sizing: border-box;
 }
 
-body {
-  height: 100vh;
+:root {
+  --header-color: #f9dc5c;
+  --body-color: #FFE4F3;
+  --secondary-color: #BBC7CE;
+  --hover-color: #F68E5F;
+  --font-color: #143642;
+  --font: 'Cormorant SC', serif;
 }
 
-:root {
+body {
+  height: 100vh;
+  background-color: var(--body-color);
+  color: var(--font-color);
+  font-family: var(--font);
 }
+
+
