--- a/src/components/Page/Header/Menu.css
+++ b/src/components/Page/Header/Menu.css
@@ -22,7 +22,7 @@
     position: absolute;
     top: 100%;
     padding: 20px 10px;
-    background: #f9dc5c;
+    background: var(--header-color);
     transform: translateX(-100%);
     transition: transform 200ms ease-in;
   }
