--- a/src/components/Page/Header/Header.css
+++ b/src/components/Page/Header/Header.css
@@ -1,13 +1,19 @@
 .Header {
+  --header-height: 35px;
+  @media (min-width: 700px) {
+    --header-height: 50px;
+  }
+
   position: sticky;
   top: 0;
-  background: var(--header-color);
-  color: var(--font-color);
+  padding-right: var(--padding);
+  height: var(--header-height);
 
-  height: 30px;
+  background: var(--header-color);
+  color: var(--white-color);
 
   display: grid;
-  grid-template-columns: max-content 1fr 50px;
+  grid-template-columns: auto 1fr auto;
   gap: 20px;
   align-items: center;
 
@@ -16,9 +22,8 @@
     justify-self: end;
   }
 
-  @media (min-width: 750px) {
-    height: 50px;
-    padding-left: 20px;
+  @media (min-width: 700px) {
+    padding-left: var(--padding);
 
     .MenuContainer {
       display: none;
